--- a/index.html
+++ b/index.html
@@ -594,6 +594,8 @@
               <img src="./assets/images/RIVAN2.jpg" alt="Cebu Set 3 - Image 3" loading="lazy">
               <img src="./assets/images/RIVAN3.jpg" alt="Cebu Set 3 - Image 4" loading="lazy">
               <img src="./assets/images/RIVAN4.jpg" alt="Cebu Set 3 - Image 5" loading="lazy">
+              <img src="./assets/images/RIVAN5.jpg" alt="Cebu Set 3 - Image 5" loading="lazy">
+              <img src="./assets/images/RIVAN6.jpg" alt="Cebu Set 3 - Image 5" loading="lazy">
             </div>
           </div>
 
